# ai_agents_mcp_bmw

./: .gitignore  Dockerfile  Dockerfile.etl  LICENSE  Makefile  README.md  docker-compose.yml  env.example  kaggle.json  pyproject.toml  requirements.txt  run_ai_agent.py  test_password.py
etl/: extract_bmw.py
input/: coffe.csv
nginx/: nginx.conf
notebooks/: database_test.ipynb  etl_analysis.ipynb
sql/: init.sql  kpis_views.sql
src/: __init__.py
src/agents/: __init__.py  ai_sql_agent.py  mcp_agent.py  mcp_agent_simple.py  mcp_handler.py  multi_llm_agent.py  orchestrator_agent.py  sql_agent.py  terminal_interface.py  visualization_agent.py
src/config/: database.py
src/database/: __init__.py  init_database.py  loader.py  run_kpis.py
src/etl/: __init__.py  data_processor.py  kaggle_extractor.py  pipeline.py  run_etl.py
src/models/: __init__.py  database_models.py
src/web/: __init__.py  streamlit_app.py
tests/: check_data.py  database_test.ipynb  run_kpis.py  test_db_connection.py  test_mcp_agent.py
